--- a/strona/style.css
+++ b/strona/style.css
@@ -1,51 +1,124 @@
-body{
-  font-family: 'Lato', sans-serif;
+.burger {
+    float: left;
+    z-index: 2;
+    position: fixed;
+    top: 30px;
+    left: 35px;
+    width: 30px;
+    
+    height: 30px;   
+    transition: 0.3s;
 }
-.carousel-fade .carousel-inner .item {
-  opacity: 0;
-  transition-property: opacity;
+span {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: darkgrey;
+    left: 0;
 }
 
-.carousel-fade .carousel-inner .active {
-  opacity: 1;
+.burger span:nth-child(1) {
+    top: 0;
+    border-radius: 4px;
+}
+.burger span:nth-child(2) {
+    top: calc(50% - 2.5px);
+    border-radius: 4px;
+}
+.burger span:nth-child(3) {
+    bottom: 0;
+    border-radius: 4px;
+}
+.burger.active {
+    transform: rotate(45deg);
+    
 }
 
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  opacity: 0;
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
   z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 70px;
+}
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+input{display: none;}
+
+.carusel{
+    position: relative;
+    max-width: 400px;
+    height: 600px;
+    max-height: 100vh;
+    margin: 20px auto;
+    overflow: hidden;
+    user-select: none;
 }
 
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-  opacity: 1;
+.carusel__item {
+    position: absolute; 
+    z-index: 1;
+    top: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: center no-repeat;
+    background-size: contain;
+    transition: left 0.5s, transform 0.5s;
+    will-change: transform;
+    backface-visibility: hidden;
 }
 
-.carousel-fade .carousel-control {
-  z-index: 2;
-} 
-@media all and (transform-3d), (-webkit-transform-3d) {
-    .carousel-fade .carousel-inner > .item.next,
-    .carousel-fade .carousel-inner > .item.active.right {
-      opacity: 0;
-      -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
-    }
-    .carousel-fade .carousel-inner > .item.prev,
-    .carousel-fade .carousel-inner > .item.active.left {
-      opacity: 0;
-      -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
-    }
-    .carousel-fade .carousel-inner > .item.next.left,
-    .carousel-fade .carousel-inner > .item.prev.right,
-    .carousel-fade .carousel-inner > .item.active {
-      opacity: 1;
-      -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
-    }
-} 
+.carusel__arrow {
+    display: none;
+    position: absolute;
+    top: 50%;
+    z-index: 3;
+    transform: translateY(-60%);
+    opacity: 0.7;
+    color: #fff;
+    background-color: #999;
+    cursor: pointer;
+    padding: 10px; 
+    font-size: 28px;
+    line-height: 39px;
+    font-weight: bold;
+}
+
+input:checked+div~div~div~div .carusel__item {background-image: none !important;}
+input:checked+div *, input:checked+div+input+div .carusel__item, input:checked+div+input+div+input+div * {display: block;}
+
+input:checked+div .carusel__item {left: -100%; transform: scale(0.4);}
+input:checked+div+input+div .carusel__item {left: 0; transform: scale(1);}
+input:checked+div+input+div+input+div .carusel__item {left: 100%; transform: scale(0.4);}
+
+input:checked+div .carusel__arrow {left: 0;}
+input:checked+div+input+div+input+div .carusel__arrow {right: 0;}
+
+input:checked+div .carusel__arrow:before {content: '❰';}
+input:checked+div+input+div+input+div .carusel__arrow:before{content: '❱';}
+
 .carousel-caption {
     text-shadow: 0 1px 4px rgba(0,0,0,.9);
   font-size:17px
@@ -54,36 +127,9 @@ body{
   font-size: 30px;
   font-family: 'Lato', sans-serif;
 }
-    html,
-    body,
-    .carousel,
-    .carousel-inner,
-    .carousel-inner .item {
-      height: 100%;
-    } 
-    .item:nth-child(1) {
-      background: url('a.jpg');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-    }
-
-    .item:nth-child(2) {
-      background: url('b.jpg');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-    }
-
-    .item:nth-child(3) {
-      background: url('c.jpg');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-    }
-    .item:nth-child(4) {
-      background: url('d.jpg');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-    }
+.logo {
+    z-index: 4;
+    float: right;
+      
+    
+}
